css/style.css
@import url("reset.css");

/* core */

body {
    background: #151515;
    color: #FFF;
    font-size: 20px;
    font-family: "Google Sans", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings: "GRAD" 0;
    line-height: 1.4;
}

b {
    font-weight: bold;
}

a {}

a:hover {
    opacity: 0.9;
}

.page-width {
    max-width: 800px;
    margin: 0 auto;
}

header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 40px 0;
}

nav {
    font-size: 30px;
}

nav ul {
    display: flex;
    gap: 10px;
}

nav li {
    padding: 10px 10px;
    border-radius: 10px;
    cursor: pointer;
    transition: all 0.3s ease;
}

nav li span {
    display: block;
    transition: all 0.3s ease;
    user-select: none;
}

nav li:hover {
    background-color: #333;
}

nav li:hover span {
    transform: rotate(10deg);
}

nav li:active span {
    transform: rotate(10deg) scale(1.2);
    filter: brightness(1.2);
}

#menu-button-tip {
    display: none;
    opacity: 0.25;
}

#menu-button-tip:hover {
    opacity: 1;
}

section {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 40px;
}

.content-box {}

.logo {
    font-size: 36px;
    font-weight: bold;
    position: relative;
    color: #FFF;
    text-decoration: none;
    display: flex;
    align-items: center;
    gap: 8px;
}

.logo:hover {
    opacity: 1;
}

.logo .level {
    position: absolute;
    top: -5px;
    right: 0;
    font-size: 11px;
    color: #777;
}

.logo:hover .icon {
    animation: brain-pulse 0.5s ease-in-out infinite;
}

@keyframes brain-pulse {

    from,
    to {
        transform: scale(1);
    }

    50% {
        transform: scale(1.1);
    }
}

#info {
    text-align: center;
}

#settings {
    padding: 20px;
    background-color: #222;
    border-radius: 10px;
    max-width: 300px;
    margin-left: auto;
    margin-right: auto;
}

#settings .setting {
    margin-bottom: 20px;
}

#settings .setting .title {
    margin-bottom: 7px;
}

#settings .setting input {
    width: 100%;
    max-width: 300px;
    padding: 10px;
    border-radius: 5px;
    border: 1px solid #444;
    background: #333;
    color: #FFF;
    font-size: 18px;
}

#settings .setting input:focus {
    outline: 2px solid #777;
}

#settings .setting input:invalid {
    outline: 2px solid rgba(255, 0, 0, 0.5);
}

#settings .setting:last-child {
    margin-bottom: 0;
}

#settings .setting input[type="checkbox"] {
    accent-color: #055c05;
    width: 2em;
    height: 2em;
}

#settings .checkbox-container {
    display: flex;
    align-items: center;
}

#settings button {
    margin-top: 2px;
}

#settings .avatar-container {
    position: relative;
    display: flex;
    width: 100%;
}

#settings .avatar {
    position: absolute;
    display: none;
    right: 5px;
    top: 5px;
    border-radius: 5px;
    width: 32px;
    height: 32px;
}

#menu-timer {
    display: none;
    font-family: monospace;
}

#menu-button-restart {
    display: none;
}

.guessing {
    display: flex;
    gap: 20px;
    align-items: flex-start;
    /* max-height: 2000px; */
}

.guessing>* {
    flex: 1;
}

.guessing .msg.last-words {
    border: 1px solid #DDD;
}

.guessing .msg {
    display: grid;
    /* Начальное состояние анимации (схлопнут) */
    grid-template-rows: 0fr;
    opacity: 0;
    margin-bottom: 0;
    /* Запускаем анимацию при появлении */
    animation: openMsg 0.2s ease-out forwards;
}

.guessing .msg .msg-content {
    /* overflow: hidden; */
    /* Скрываем то, что не влезает при анимации. Потенциально наличие overflow правильнее, но я тестила оба варианта и не заметила разницы.. мб вернуться к этому в будущем. */
    border: 1px solid transparent;
    border-radius: 10px;
    position: relative;
    background-color: lab(16.1051% -1.18239 -11.7533);
}

.guessing .word-and-distance {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 13px 15px 10px;
}

.guessing .iwawwa {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 15px 2px;
}

.guessing .iwawwa .distance {
    animation: fadeInOpacity 2s;
}

.guessing .word {
    z-index: 1;
    text-transform: uppercase;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
}

.guessing .distance {
    z-index: 1;
    font-weight: bold;
    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
}

.guessing .bg {
    border-radius: 10px;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    background: rgba(255, 255, 255, 0.1);
}

.guessing .name {
    position: absolute;
    top: 0;
    left: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    margin-left: 15px;
}

.guessing .last-words .name {
    display: none;
}

footer.main {
    display: flex;
    align-items: center;
    justify-content: center;
}

footer.main .github-link img {
    width: 80px;
}

footer.tech-things {
    display: flex;
    align-items: center;
    justify-content: center;
    color: #555;
}

.button,
button,
input[type="button"],
input[type="submit"] {
    width: 100%;
    cursor: pointer;
    user-select: none;
    padding: 15px 20px;
    border-radius: 5px;
    border: none;
    background-color: #055c05;
    color: #FFF;
    font-size: 18px;
    display: inline-block;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
    transition: all 0.2s ease;
}

.button:hover,
button:hover,
input[type="button"]:hover,
input[type="submit"]:hover {
    /* background-color: #444; */
    transform: translateY(-1px);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    filter: brightness(1.1);
}

.button:active,
button:active,
input[type="button"]:active,
input[type="submit"]:active {
    transform: translateY(0);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

.button:disabled,
button:disabled,
input[type="button"]:disabled,
input[type="submit"]:disabled {
    background-color: #555;
}

@keyframes fadeInOpacity {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes openMsg {
    0% {
        grid-template-rows: 0fr;
        opacity: 0;
        transform: translateY(-20px);
        margin-bottom: 0;
    }

    100% {
        grid-template-rows: 1fr;
        /* 1fr = 100% реальной высоты контента */
        opacity: 1;
        transform: translateY(0);
        margin-bottom: 10px;
        /* Финальный отступ между сообщениями */
    }
}

/* error overlay */

.error-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.95);
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    font-size: 2rem;
    padding: 20px;
    z-index: 9999;
    animation: fadeInOpacity 0.5s ease-in-out;
}

.error-overlay .error-content {
    max-width: 600px;
}

.error-overlay .error-icon {
    font-size: 5rem;
    margin-bottom: 20px;
}

/* app theme - obs-overlay */
.theme-obs-overlay nav,
.theme-obs-overlay #info,
.theme-obs-overlay footer.main,
.theme-obs-overlay footer.tech-things {
    display: none;
}

